tests/NormalTests/paczka1/small_fuzzy/45674758.err
Error in line 1: jnu S694 54,0
Error in line 2: jnu A138 53,3
